--- a/express/web/index.html
+++ b/express/web/index.html
@@ -68,7 +68,7 @@
                         <li>
                             <h4>Tool Chatroom</h4>
                             <div>
-                                <input type="text" class="value">
+                                <input type="text" class="value" value="24-2 장비톡방">
                             </div>
                         </li>
                         <li>
